# GhostEscape

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
doc/: class_diagram.md  class_diagram.puml
docs/: CMakeLists.md  CMakeLists参考文档.md  project-structure.md  引擎架构文档.md  项目结构.md
example/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example04.cpp  example05.cpp
include/: Enemy.h  Game.h  Player.h  SceneMain.h
include/affiliate/: Collider.h  Sprite.h  SpriteAnim.h
include/core/: Actor.h  AssetStore.h  Defs.h  Entity.h  Game.h  Object.h  ObjectAffiliate.h  ObjectScreen.h  ObjectWorld.h  Scene.h
include/raw/: States.h  Weapon.h
include/world/: Effect.h  Spell.h
lib/: CMakeLists.txt  Enemy.cpp  Game.cpp  Player.cpp  SceneMain.cpp  Spawner.cpp  WeaponThunder.cpp
lib/affiliate/: Collider.cpp  Sprite.cpp  SpriteAnim.cpp
lib/core/: Actor.cpp  AssetStore.cpp  Entity.cpp  Game.cpp  Object.cpp  ObjectAffiliate.cpp  ObjectScreen.cpp  ObjectWorld.cpp  Scene.cpp
lib/raw/: States.cpp  Weapon.cpp
lib/screen/: UIMouse.cpp
lib/world/: Effect.cpp  Spell.cpp
src/: CMakeLists.txt  main.cpp
src/core/impl/: AssetStore.cpp  Entity.cpp  Game.cpp  Object.cpp  ObjectAffiliate.cpp  ObjectWorld.cpp  Scene.cpp
src/core/impl/game/: Enemy.cpp  Player.cpp  SceneMain.cpp  SceneTitle.cpp  Spawner.cpp  WeaponThunder.cpp
src/core/include/core/: AssetStore.h  Defs.h  Entity.h  Game.h  Object.h  ObjectAffiliate.h  ObjectScreen.h  ObjectWorld.h  Scene.h
src/core/include/core/game/: Enemy.h  Player.h  SceneMain.h  SceneTitle.h  Spawner.h  WeaponThunder.h
src/utils/impl/affiliate/: AffiliateBar.cpp  Collider.cpp  Sprite.cpp  TextLable.cpp
src/utils/impl/raw/: BackGroundStar.cpp  Timer.cpp  Weapon.cpp
src/utils/impl/screen/: HUDButton.cpp  HUDSkill.cpp  HUDStates.cpp  HUDText.cpp  UIMouse.cpp
src/utils/impl/world/: Effect.cpp  Spell.cpp
src/utils/include/affiliate/: AffiliateBar.h  Sprite.h  TextLable.h
src/utils/include/raw/: BackgroundStar.h  Timer.h  Weapon.h
src/utils/include/screen/: HUDButton.h  HUDSkill.h  HUDStates.h  HUDText.h  UIMouse.h
src/utils/include/world/: Effect.h  Spell.h
test/: CMakeLists.txt
tests/: CMakeLists.txt
